<?xml version="1.0"?>
<package format="2">
  <name>openvdb_catkin</name>
  <version>0.0.0</version>
  <description>openvdb_catkin</description>
  <maintainer email="marius.b.fehr@gmail.com">mfehr</maintainer>

  <license>New BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
</package>
