<?xml version="1.0"?>
<package format="2">
  <name>openvdb_interface_test</name>
  <version>0.0.0</version>
  <description>openvdb_interface_test</description>
  <maintainer email="marius.b.fehr@gmail.com">mfehr</maintainer>

  <license>closed</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>openvdb_catkin</depend>
  <depend>gflags_catkin</depend>
  <depend>glog_catkin</depend>
</package>
